<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#E9EAED"
    >

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/name"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:id="@+id/etName"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/alter"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:id="@+id/etAge"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/benutzer"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:id="@+id/etUsername"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/passwort"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:id="@+id/etPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bRegister"
        android:text="@string/registrieren"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/com_facebook_blue"/>

</LinearLayout>
