<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E9EAED"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="20dp">
               <TextView
                android:text="@string/mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                   android:textColor="@color/black"
                android:textSize="30dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bActivar"
                android:textColor="@color/white"
                android:text="@string/activar"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@color/com_facebook_blue"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"></Spinner>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bDesactivar"
                android:text="@string/desactivar"
                android:textStyle="bold"
                android:background="@color/com_facebook_blue"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal" />

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="20dp">
        <TextView
            android:text="@string/mensaje2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bJugar"
        android:text="@string/jugar"
        android:textStyle="bold"
        android:background="@color/com_facebook_blue"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
       />

    <com.sebastiangomez.konjugapp.GifView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/gif"
        android:layout_gravity="center_horizontal"
         />


</LinearLayout>
